--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -6,9 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <ul>
-      <li><a href="./1-timer.html">Timer</a></li>
-      <li><a href="./2-snackbar.html">Snackbar</a></li>
-    </ul>
+    <a href="./index.html">Back</a>
+    <script src="./js/2-snackbar.js"></script>
   </body>
 </html>
